--- a/index.html
+++ b/index.html
@@ -3,99 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-        .box{
-
-            width: 300px;
-            border: 2px solid red;
-            height: 300px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>g3-architects-resources</title>
   </head>
   <body>
-    <section>
-      <div class="box">
-        <h3>my tex box1</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem
-          dignissimos fugiat modi voluptatum ipsum officia recusandae libero
-          dicta similique ratione a necessitatibus laboriosam, saepe, impedit
-          aspernatur possimus debitis ex voluptates officiis, ipsam harum nulla!
-          Esse cum perspiciatis possimus voluptatem facere quas quisquam sunt,
-          totam earum sint nulla facilis similique molestias enim ea voluptatum
-          itaque, quibusdam blanditiis alias maxime consectetur laudantium iste
-          aperiam fuga. Ab deserunt iste quo numquam, fugiat accusantium facilis
-          aperiam veritatis! Sint illum quisquam sequi officia eius quos ut unde
-          cupiditate consequatur labore repellendus ad eligendi, fugiat odit
-          porro fuga debitis illo et tempora aliquid quod ab. Pariatur minima
-          earum modi esse fuga dolorum sint quasi consequatur totam accusamus ab
-          iure incidunt nemo hic deleniti, maxime dolor vel! At ipsum quasi
-          labore voluptatem obcaecati reprehenderit ad perspiciatis ipsa
-          consequuntur, aliquid eveniet corporis ut et? Vel suscipit corporis
-          eveniet, omnis sed iusto dignissimos laudantium veniam, deserunt quas
-          provident maiores aut nihil dicta aspernatur animi ut expedita! Totam
-          expedita fugiat neque repellendus voluptates perspiciatis consectetur
-          quas aperiam, quibusdam, facere hic perferendis ullam consequatur
-          corporis laboriosam quod laborum a nostrum at unde deserunt ipsa
-          eaque? Officia facere, consequuntur explicabo numquam nobis quis,
-          voluptas sit quibusdam accusantium unde voluptates alias nemo
-          voluptate?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem
-          dignissimos fugiat modi voluptatum ipsum officia recusandae libero
-          dicta similique ratione a necessitatibus laboriosam, saepe, impedit
-          aspernatur possimus debitis ex voluptates officiis, ipsam harum nulla!
-          Esse cum perspiciatis possimus voluptatem facere quas quisquam sunt,
-          totam earum sint nulla facilis similique molestias enim ea voluptatum
-          itaque, quibusdam blanditiis alias maxime consectetur laudantium iste
-          aperiam fuga. Ab deserunt iste quo numquam, fugiat accusantium facilis
-          aperiam veritatis! Sint illum quisquam sequi officia eius quos ut unde
-          cupiditate consequatur labore repellendus ad eligendi, fugiat odit
-          porro fuga debitis illo et tempora aliquid quod ab. Pariatur minima
-          earum modi esse fuga dolorum sint quasi consequatur totam accusamus ab
-          iure incidunt nemo hic deleniti, maxime dolor vel! At ipsum quasi
-          labore voluptatem obcaecati reprehenderit ad perspiciatis ipsa
-          consequuntur, aliquid eveniet corporis ut et? Vel suscipit corporis
-          eveniet, omnis sed iusto dignissimos laudantium veniam, deserunt quas
-          provident maiores aut nihil dicta aspernatur animi ut expedita! Totam
-          expedita fugiat neque repellendus voluptates perspiciatis consectetur
-          quas aperiam, quibusdam, facere hic perferendis ullam consequatur
-          corporis laboriosam quod laborum a nostrum at unde deserunt ipsa
-          eaque? Officia facere, consequuntur explicabo numquam nobis quis,
-          voluptas sit quibusdam accusantium unde voluptates alias nemo
-          voluptate?
-        </p>
+    <header>
+      <div class="container">
+        <section>
+          <nav>
+            <div class="logo"><a href="">G3 Architects</a></div>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href=""> Login</a></li>
+            </ul>
+            <div class="hero-part"></div>
+          </nav>
+          <div class="nav-contant">
+            <h1 class="nav-contant-h1">
+              Brand New <br />
+              Group of Architects
+            </h1>
+            <p class="nav-contant-p">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <div class="nav-btn"><button>Explore More</button></div>
+          </div>
+          <div class="hero-banner"></div>
+        </section>
       </div>
-      <div class="box">
-        <h3>my tex box2</h3>
-        <p>
-          Nam expedita ratione dolor, earum beatae ducimus, corrupti ipsa,
-          dolore quos numquam consectetur! Nulla aspernatur vitae ipsa cum
-          praesentium eaque id velit repellendus obcaecati ratione quaerat, fuga
-          accusamus hic sunt repudiandae vel molestiae, culpa, aliquam pariatur!
-          Incidunt autem reiciendis sapiente vero possimus tempore
-          exercitationem fugiat quisquam adipisci optio, quod harum, assumenda
-          id doloribus fuga in dolores ex ducimus aspernatur perferendis quae
-          atque? Magnam, sint soluta quibusdam harum dolorum facere fuga ea,
-          reiciendis ducimus vero nulla quidem voluptas molestiae ipsa quia sit?
-          Eligendi, quidem voluptatem hic, fugit exercitationem sed neque ab
-          voluptate ea sequi repellendus quibusdam voluptatibus veritatis
-          commodi natus rem? Cupiditate esse accusamus animi! Nemo sunt quis
-          praesentium tenetur voluptate obcaecati. Eos sed laborum, modi et
-          reiciendis blanditiis cupiditate rerum ab fugiat optio temporibus
-          tempora laudantium facere maxime accusamus asperiores beatae inventore
-          fugit ipsum ad. Commodi necessitatibus ipsa, temporibus quo unde
-          asperiores, voluptates iure, officiis expedita nostrum delectus
-          facere. Illum omnis nihil, alias non at, officiis neque nobis
-          reiciendis magni accusamus, enim quasi tenetur cupiditate aperiam
-          nostrum voluptas unde harum nam illo. Reprehenderit id officia quia
-          veritatis expedita enim in earum excepturi est et vel, distinctio
-          eaque cumque ratione non repudiandae incidunt. Natus non porro eum
-          repellat ullam, officiis quibusdam.
-        </p>
+    </header>
+    <main>
+      <div class="container">
+        <section>
+          <div class="quick-list-menu-wraper">
+            <div class="quick-list-img">
+              <div><img src="img/team1.png" alt="" /></div>
+              <div><img src="img/team2.png" alt="" /></div>
+              <div><img src="img/team3.png" alt="" /></div>
+              <div><img src="img/team4.png" alt="" /></div>
+            </div>
+            <div class="quick-list-content">
+              <h2>Quick list of Our Features</h2>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+              <button>Explore More</button>
+            </div>
+          </div>
+        </section>
       </div>
-    </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
